# ADMA2eCAL

./: .gitignore  CMakeLists.txt  README.md
debug_interpreter/: CMakeLists.txt
debug_interpreter/proto/: Adma.proto  header.proto
debug_interpreter/src/: fill_adma_proto_object.cpp  fill_adma_proto_object.h  get_value.h  main.cpp
generator/: generate.py
generator/templates/: ADMA.proto  fill_adma_proto_object.cpp  fill_adma_proto_object.h
udp2ecal/: CMakeLists.txt
udp2ecal/proto/: header.proto
udp2ecal/src/: adma_sender.cpp  adma_sender.h  main.cpp  udp_data_receiver.cpp  udp_data_receiver.h
xml/: ADMA_UDP-DataStream_ADMAnet_v3.2_v30.2.0.0.xml  ADMA_UDP-DataStream_ADMAnet_v3.2_v30.2.0.0.xsd  ADMA_UDP-DataStream_ADMAnet_v3.3.3_v30.8.0.1.xml  ADMA_UDP-DataStream_ADMAnet_v3.3.4_v30.10.0.40.xml  ADMA_UDP-DataStream_BRAKING_v1.0_v30.4.0.0.xml  ADMA_UDP-DataStream_BRAKING_v1.0_v30.4.0.0.xsd  ADMA_UDP-DataStream_DELTA_v7.0_v30.5.0.17.xml  ADMA_UDP-DataStream_DELTA_v7.0_v30.5.0.17.xsd  ADMA_UDP-DataStream_XML-Schema_v1.0_v30.8.0.0.xsd
